# velmo-v2

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  brief.md  docker-compose.yml  pyproject.toml  skills-lock.json
.agents/skills/: developing-with-streamlit
.claude/skills/: developing-with-streamlit
.github/workflows/: deploy.yml  eval.yml  image.yml  quality.yml  release.yml
.specify/: init-options.json  integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: reco_expert.md  roadmap.md
eval/: guardrail_cases.jsonl  memory_cases.jsonl  quality_cases.jsonl
eval/Archive/: guardrail_cases.jsonl  memory_cases.jsonl  quality_cases.jsonl
infra/: README.md  provision.sh
kb/docs/: authenticite.md  conditions-echange.md  contact-pro.md  delais-livraison.md  entretien-maillots.md  frais-de-port.md  garanties.md  glossaire.md  guide-tailles.md  paiement.md  politique-retour.md  reassort.md  remboursement.md  retractation-rgpd.md  securite-paiement.md  suivi-commande.md
scripts/: seed.py  seed_kb.py  serve.sh
specs/001-short-term-memory/: spec.md
specs/002-long-term-memory/: spec.md
specs/003-guardrails/: solutions-garde-fous.md  spec.md
specs/004-api/: spec.md
specs/006-evaluation-automatisee/: boucle-qualite.md
src/velmo/: __init__.py  agent.py  agent_graph.py  agent_tools.py  cli.py  db.py  demo_app.py  kb_store.py  llm.py  observability.py  routing.py  sampledata.py  trace.py  trace_view.py  turn_log.py  turn_log_view.py
tests/: conftest.py  test_agent.py  test_agent_graph.py  test_agent_masking.py  test_agent_observability.py  test_agent_tools.py  test_agent_trace.py  test_agent_turn_log.py  test_checkpointer.py  test_content_safety.py  test_demo_trace_view.py  test_demo_turn_log_view.py  test_extract.py  test_fact_store.py  test_facts.py  test_graph_trace.py  test_graph_turn_log.py  test_guardrail_detectors.py  test_guardrail_engine.py  test_guardrail_patterns.py  test_guardrail_refusals.py  test_guardrail_trace.py  test_guardrail_turn_log.py  test_llm.py  test_memory_tools.py  test_observability.py  test_routing.py  test_seed_idempotent.py  test_tool_outcomes.py  test_trace.py  test_turn_log.py  test_vector_config.py
tests/acceptance/: test_business.py  test_guardrails.py  test_memory.py  test_mlops.py
tests/mlops/: test_cases.py  test_guardrail_suite.py  test_memory_suite.py  test_offline_agent_tracer.py  test_quality_suite.py  test_report.py  test_score_cli.py  test_scoring.py  test_version.py
(+62 files in other folders)
