[project]
name = "velmo-v2"
version = "2.0.0"
description = "Velmo 2.0 — agent de support pour une boutique de maillots de foot collector (mémoire, garde-fous, MLOps)."
requires-python = ">=3.11,<3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0,<2.1",
    "psycopg[binary]>=3.1,<3.3",
    "alembic>=1.13,<2",
    "langchain>=1.2,<2.0",
    "langchain-core>=1.0,<2.0",
]

[project.optional-dependencies]
# Mémoire long terme épisodique + RAG FAQ (Chroma + embeddings e5).
vector = [
    "chromadb>=0.5,<0.6",
    "sentence-transformers>=3,<4",
]
# LLM via Azure AI Inference (Kimi-K2.6).
llm = [
    "langchain-azure-ai>=1.0,<2.0",
    "azure-ai-inference>=1.0.0b9",
    "langmem>=0.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<0.10",
    "mypy>=1.10,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/velmo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
